refactor: fix enum value finding, immutable collections insertion